@@ -7,7 +7,6 @@ distshare={toxworkdir}/distshare
 sdistsrc={distshare}/py-*
 
 [testenv]
-indexserver=http://pypi.testrun.org
 changedir=testing
 commands=
   py.test -rfsxX --junitxml={envlogdir}/junit-{envname}.xml []
